--- a/iOS-assignment1/iOS-assignment1/iOS-assignment1/Base.lproj/Main.storyboard
+++ b/iOS-assignment1/iOS-assignment1/iOS-assignment1/Base.lproj/Main.storyboard
@@ -80,18 +80,24 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Log in">
                                     <backgroundConfiguration key="background" cornerRadius="29"/>
+                                    <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                                     <color key="baseBackgroundColor" red="0.070940929321450269" green="0.85386352987587943" blue="0.86078912019729614" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RNL-1V-6ks">
                                 <rect key="frame" x="39" y="756" width="335" height="55"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Sign Up">
+                                <buttonConfiguration key="configuration" style="gray" title="Sign Up">
                                     <backgroundConfiguration key="background" cornerRadius="29"/>
+                                    <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                                     <color key="baseForegroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="baseBackgroundColor" red="0.97747165489999999" green="0.97888760200000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="SignUpButton:" destination="nY2-LX-0bP" eventType="touchUpInside" id="dbe-BW-SWa"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yFZ-S2-kgX"/>
@@ -103,6 +109,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1IT-5c-2v5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="nY2-LX-0bP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-131.8840579710145" y="-709.15178571428567"/>
         </scene>
